...
  }

  Future<void> handleSearchType() async {
    if (Get.arguments != null) {
      if (Get.arguments["type"] == SEARCHTYPES.pickupLocation) {
        isShow = true;
        text.value = "Set pickup location";
        searchPickup = Get.arguments["location"];

        debugPrint("Set Address searchPickup");
        await myLocationMarker("1", searchPickup?.location,
            searchPageController.myPickupSearchLocationController);
        searchLocationType = SearchLocationTypes.SELECTLOCATION;
...
      searchPageController.currentLocation = searchPickup!.location!;
      searchPageController.myPickupSearchLocationController.text =
          displayAddress.value;
      // searchPageController.location.clear();
      Get.back();
    } else if (searchLocationType == SearchLocationTypes.SELECTDESTINATION) {
      text.value = "Set up destination";
      to = searchDestination?.location;
      debugPrint("to : ${to?.toJson()}");
      await myLocationMarker(
          "2", to, searchPageController.myDestinationSearchController);
      searchLocationType = SearchLocationTypes.HASBOTH;
    } else if (searchLocationType == SearchLocationTypes.SELECTEVIAMAP) {
...
    Get.defaultDialog(
        middleText: "You are waiting pretty long, do you want cancel request?",
        backgroundColor: Colors.white,
        titleStyle: const TextStyle(color: Colors.black),
        middleTextStyle:
            const TextStyle(color: Colors.black, fontWeight: FontWeight.bold),
        textConfirm: "Yes",
        onConfirm: () async {
          try {
            await cancelBooking();
            showSnackBar("Sucess", "Cancel Request Sucess");
          } catch (e) {
            debugPrint(e.toString());
...
          }
        },
        onCancel: () {
          isShowCancel = false;
        },
        radius: 10,
        textCancel: "No");
  }

  Future<void> cancelBooking() async {
    EasyLoading.show();
    isLoading.value = true;

...
