...
                      Container(
                        height: 80,
                        padding:
                            const EdgeInsets.only(left: 10, right: 10, top: 30),
                        width: double.infinity,
                        child: ElevatedButton(
                            key: const Key("map_view_cancel_order_btn"),
                            style: ElevatedButton.styleFrom(
                                backgroundColor: Colors.red),
                            onPressed: () async {
                              await controller.openCancelRequestDialog();
                            },
                            child: const Text("Cancel order")),
...
        Row(
          children: [
            Visibility(
              visible: controller.isShow,
              child: Expanded(
                child: ElevatedButton(
                    key: const Key("map_view_next_btn"),
                    onPressed: () async {
                      await controller.handleNextButton();
                    },
                    style:
                        ElevatedButton.styleFrom(backgroundColor: Colors.green),
                    child: Text(
...
            SizedBox(
              width: double.infinity,
              height: 40,
              child: IgnorePointer(
                ignoring: controller.isLoading.value,
                child: ElevatedButton(
                    key: const Key("map_view_order_btn"),
                    style:
                        ElevatedButton.styleFrom(backgroundColor: Colors.green),
                    onPressed: () async {
                      // await controller.bookingCar();

                      await controller.sendRequest();
...
